--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -236,6 +236,10 @@ fr:
         "OU"
       resumetitle:
         "Résumé de vos choix"
+      goreador:
+        "Accéder aux résultats"
+      gofiltering:
+        "Ajouter des filtres"
       twitter:
         all:
           "Toutes les sources twitter"
@@ -252,3 +256,6 @@ fr:
           "Ajouter vos propres flux RSS"
         opml:
           "Faire un import OPML"
+    filtering:
+      title:
+        "Sélectionner vos filtres"
