Now able to add some filters

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -259,7 +259,7 @@ en:
         "Choose the filter's type"
       buttonOption:
         "Optionnal"
-      buttonMustHave:
+      buttonMusthave:
         "Must have"
       buttonBan:
         "Bannable"
