--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -252,7 +252,7 @@ fr:
           "Faire un import OPML"
     filtering:
       title:
-        "Sélectionner vos filtres"
+        "Ajouter des filtres"
       related:
         "Choisisser des mots-liés"
       filtertype:
@@ -265,8 +265,8 @@ fr:
         "Interdit"
       resume:
         option:
-          "Filtrer les résultats traitant d'au moins une des notions suivantes"
+          "Filtrer les résultats traitant d'au moins une des notions suivantes ..."
         musthave:
-          "Et toutes les notions suivantes"
+          "... et toutes les notions suivantes ..."
         ban:
-          "Et aucunes de ces notions"
+          "... et aucunes des notions suivantes"
