Changed the layout of the welcome page

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -81,6 +81,8 @@ en:
       "Go reador!"
     searchadvanced:
       "Semantic search"
+    gobutton:
+      "New search"
   moreabout:
     title:
       "More about Reador!"
