--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -81,6 +81,8 @@ fr:
       "Go !"
     searchadvanced:
       "Recherche sémantique"
+    gobutton:
+      "Démarrer la recherche"
   moreabout:
     title:
       "En savoir plus sur Reador!"
