Changed the go button text

--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -82,7 +82,7 @@ fr:
     searchadvanced:
       "Recherche sémantique"
     gobutton:
-      "Démarrer la recherche"
+      "Nouvelle recherche"
   moreabout:
     title:
       "En savoir plus sur Reador!"
