--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -254,6 +254,8 @@ fr:
           "Faire un import OPML"
     filtering:
       title:
+        "Sélectionner vos filtres"
+      subtitle:
         "Ajouter des filtres"
       related:
         "Choisisser des mots-liés"
