Changer a button title

--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -198,7 +198,7 @@ fr:
   items:
     reminder:
       update:
-        "Actualiser"
+        "Relancer"
       change:
         "Modifier"
     users:
