Add a popover on the summary box

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -206,7 +206,7 @@ en:
         "Share : "
     popover:
       title:
-        "Added confirmation"
+        "Confirmation"
       content:
         "Tag well added"
   newmodal:
