--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -206,7 +206,7 @@ fr:
         "Partager : "
     popover:
       title:
-        "Confirmation d'ajout"
+        "Confirmation"
       content:
         "Tag bien ajouté"
   newmodal:
