Changed the title of the popover of the tag

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -209,6 +209,8 @@ en:
         "Confirmation"
       content:
         "Tag well added"
+      smalltitle:
+        "Add the tag as :"
   newmodal:
     breadcrumb:
       sources:
