--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -209,6 +209,8 @@ fr:
         "Confirmation"
       content:
         "Tag bien ajouté"
+      smalltitle:
+        "Ajouter le tag comme :"
   newmodal:
     breadcrumb:
       sources:
