[#53880527]clean code and move search tool to controller searches

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -234,7 +234,9 @@ en:
         "Summary of your choices"
       goreador:
         "Show the results"
-      gofiltering:
+      goeditfiltering:
+        "Edit some filters"
+      gonewfiltering:
         "Add some filters"
       choice:
         "Your choices"
