Corrected a error in french

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -260,7 +260,7 @@ en:
       title:
         "Select your filters"
       subtitle:
-        "Add some filters"
+        "Add a filter"
       related:
         "Choose some related words"
       filtertype:
