Changed the title in english

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -74,7 +74,7 @@ en:
       "Sign up on <b>Reador</b>"
   search:
     infobulle:
-      "<u>Reador</u> can help you?"
+      "Can <u>Reador</u> help you?"
     sources:
       "select sources"
     searchbutton:
