--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -200,7 +200,7 @@ fr:
       update:
         "Actualiser"
       change:
-        "Modifier"
+        "Modification avancée"
     users:
       share:
         "Partager : "
