--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -208,7 +208,10 @@ fr:
       title:
         "Confirmation"
       content:
-        "Tag bien ajouté"
+        "<div class='row-fluid'>Tag bien ajouté</div><div class='row-fluid'>
+        <button id='updateSearch' class='btn btn-success span12' type='button' onclick='movingData();'>
+            Actualiser
+         </button></div>"
       smalltitle:
         "Ajouter le tag comme :"
   newmodal:
