Added a tooltip on the all twitter sources

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -246,6 +246,8 @@ en:
       twitter:
         all:
           "All twitter sources"
+        tooltip:
+          "Only from your timeline"
         holderpersonn:
           "Add someone to follow"
         holdertag:
