Changed the css of import opml file

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -37,7 +37,7 @@ en:
       title:
         "Import opml file"
       empty:
-        "Aucun fichier"
+        "No file"
       button:
         select:
           "Select a file"
