First layout of adding personnal rss

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -45,6 +45,10 @@ en:
           "Upload"
         cancel:
           "Cancel"
+    rss:
+      button:
+        addall:
+          "Add all"
     groups:
       title:
         "Manage sources group"
