First implementation of the user's sources panel

--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -30,7 +30,7 @@ fr:
       theme:
         "Theme"
     your:
-      "Vous sources"
+      "Vos sources"
     new:
       "Nouvelle source"
     opml:
