Finish the layout of the sources

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -31,6 +31,10 @@ en:
         "Owner"
       theme:
         "Theme"
+      show:
+        "Afficher"
+      hide:
+        "Cacher"
     your:
       title:
         "Your sources"
