Put the title in yml file

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -14,6 +14,8 @@ en:
       notlogged:
         'You are not logged with a twitter account.'
   source:
+    title:
+      "User sources management"
     elemsNumber:
       "elements"
     list:
