Add the show all source/hide all source option

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -34,9 +34,13 @@ en:
       theme:
         "Theme"
       show:
-        "Afficher"
+        "Show"
       hide:
-        "Cacher"
+        "Hide"
+      hideall:
+        "Hide all"
+      showall:
+        "Show all"
     your:
       title:
         "Your sources"
