--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -65,6 +65,8 @@ fr:
       button:
         addall:
           "Tout ajouter"
+        ownsource:
+          "Vous devez être connecté"
     groups:
       title:
         "Gérer vos groupes de sources"
