Charge the rss flow onclick now

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -44,6 +44,8 @@ en:
     your:
       title:
         "Your sources"
+      loading:
+        "Loading..."
     new:
       title:
         "New source"
