--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -44,6 +44,8 @@ fr:
     your:
       title:
         "Vos sources"
+      loading:
+        "Chargement..."
     new:
       title:
         "Nouvelle source"
