--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -13,6 +13,8 @@ en:
     err:
       notlogged:
         'You are not logged with a twitter account.'
+  noback:
+    "You will lost all you work if you do that."
   source:
     title:
       "User sources management"
