--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -252,7 +252,7 @@ fr:
         "Confirmation"
       content:
         "<div class='row-fluid'>Tag bien ajouté</div><div class='row-fluid'>
-        <button id='updateSearch' class='btn btn-success span12' type='button' onclick='movingData();'>
+        <button id='updateSearch' class='btn btn-success span12 updater' type='button' onclick='movingData();'>
             Actualiser
          </button></div>"
       smalltitle:
