Added i18n to placeholder for new tag

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -257,6 +257,8 @@ en:
          </button></div>"
       smalltitle:
         "Add the tag as :"
+    newtag:
+      "New tag"
     modal:
       delete:
         title:
