--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -257,6 +257,8 @@ fr:
          </button></div>"
       smalltitle:
         "Ajouter le tag comme :"
+    newtag:
+      "Nouveau tag"
     modal:
       delete:
         title:
