Added the link to the help page

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -106,6 +106,8 @@ en:
       "Sources"
     twitter:
       "Your twitter timeline!"
+    help:
+      "Need help?"
     signIn:
       "Sign in"
     signInWith:
