--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -106,6 +106,8 @@ fr:
       "Sources"
     twitter:
       "Votre timeline twitter!"
+    help:
+      "Besoin d'aide?"
     signIn:
       "Se connecter"
     signInWith:
