Multiple adding for rss own sources

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -189,6 +189,10 @@ en:
         "All"
       addone:
         "Add"
+      addTheme:
+        "Add this theme"
+      addAllTheme:
+        "Add all"
     table: 
       keyword:
         "Source"
