--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -189,6 +189,10 @@ fr:
         "Tout"
       addone:
         "Ajouter"
+      addTheme:
+        "Ajouter ce thème"
+      addAllTheme:
+        "Tout ajouter"
     table: 
       keyword:
         "Type"
