--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -337,7 +337,7 @@ en:
       subtitle:
         "Add a filter"
       related:
-        "Choose some related words"
+        "Choose some synonyms"
       filtertype:
         "Choose the filter's type"
       buttonOption:
