--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -269,7 +269,7 @@ en:
       title:
         "Confirmation"
       content:
-        "<div class='row-fluid'>Tag bien ajouté</div><div class='row-fluid'>
+        "<div class='row-fluid'>Tag added</div><div class='row-fluid'>
         <button id='updateSearch' class='btn btn-success span12 updater' type='button' onclick='movingData();'>
             Update
          </button></div>"
