minimize the size of "add filters" button and remove underline on Reador home page

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -128,7 +128,7 @@ en:
       "Remember me"
   search:
     infobulle:
-      "Can <u>Reador</u> help you?"
+      "Can Reador help you?"
     sources:
       "select sources"
     searchbutton:
