--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -128,7 +128,7 @@ fr:
       "Se souvenir de moi"
   search:
     infobulle:
-      "<u>Reador</u> pour vous servir!"
+      "Reador pour vous servir!"
     sources:
       "selection des sources"
     searchbutton:
