[#58333794] some minor bug fix on home page and add the howtoo video

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -127,6 +127,8 @@ en:
     remember:
       "Remember me"
   search:
+    disclaimer:
+      "Filter created, the new sources will be download soon, please be patient."
     infobulle:
       "Can Reador help you?"
     sources:
