--- a/ZONE-watcher/config/locales/devise.fr.yml
+++ b/ZONE-watcher/config/locales/devise.fr.yml
@@ -23,7 +23,7 @@ fr:
         subject: Instructions pour déverrouiller le compte
     omniauth_callbacks:
       failure: ! 'Nous ne pouvons pas vous authentifier depuis %{kind} pour la raison suivante : ''%{reason}''.'
-      success: Autorisé avec succès par votre compte %{kind}.
+      success: Vous vous êtes connecté avec succès à %{kind}.
     passwords:
       forgot: mot de passe oublié?
       no_token: Vous ne pouvez pas accéder à cette page si vous n’y accédez pas depuis un email de réinitialisation de mot de passe. Si vous venez en effet d’un tel email, vérifiez que vous avez copié l’adresse URL en entier.
@@ -41,7 +41,7 @@ fr:
       updated: Votre compte a été modifié avec succès.
     sessions:
       signed_in: Connecté avec succès.
-      signed_out: Déconnecté avec succès.
+      signed_out: Vous vous êtes déconnecté avec succès.
     unlocks:
       send_instructions: Vous allez recevoir un email sous quelques minutes contenant les instructions nécessaires au déblocage de votre compte.
       send_paranoid_instructions: Si votre compte existe, vous recevrez un email indiquant comment le déverrouiller sous quelques minutes.
