--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -128,6 +128,8 @@ en:
       "Remember me"
     password:
       "Password"
+    favoris:
+      "Your favorites news"
   search:
     disclaimer:
       "Filter created, the new sources will be download soon, please be patient."
